--- a/uzduotys/MAMP/PROJEKTAI/Ruta/projektas/nav.html
+++ b/uzduotys/MAMP/PROJEKTAI/Ruta/projektas/nav.html
@@ -16,7 +16,7 @@
     <nav class="navbar">
       <div class="container-fluid">
         <div class="navbar-header">
-          <a class="navbar-brand" href="#">
+          <a class="navbar-brand" href="index.php">
             <img class="logo" src="images/hqLogoClean.png" style="width: 230px">
           </a>
         </div>
