--- a/uzduotys/MAMP/PROJEKTAI/Simona/index.html
+++ b/uzduotys/MAMP/PROJEKTAI/Simona/index.html
@@ -92,13 +92,13 @@
                 <img class="triforce" src="icons\triangle.png" alt="triangle" width="300" height="300"><br/>
 
                 <!-- MUSHROOM -->
-                <a href="aprasymai_grybai.php" target="">
+                <a href="info/gryb/ag_baco.php" target="">
                   <div class="mushroom">
                   </div>
                 </a>
 
                 <!-- LEAF & TREE -->
-                <a href="aprasymai_augalai.php" target="">
+                <a href="info/aug/aa_bekotis.php" target="">
                   <div class="leaf">
                   </div>
                 </a>
@@ -136,18 +136,24 @@
               <div class="col-xs-3 aprasymas">
                 <p>
                   <h4> Lietuvos raudonoji knyga – tai ne tik retų ir nykstančių rūšių sąrašai, aprašymai, bet ir teisinis dokumentas, kuriuo remiantis šalyje organizuojama šių rūšių apsauga, sudaromi gamtotvarkos planai joms išsaugoti. Šią knygą sudaro žinių sąvadas apie saugomų rūšių būklę ir apsaugos būdus.
+                  Į Raudonąją Knygą įrašomos rūšys, kurioms gresia išnykimas sumažėjus jų skaitlingumui, pakitus arealui, pablogėjus ekologinėms sąlygoms.
                     </h4>
                 </p>
               </div>
               <div class="col-xs-3 aprasymas">
                 <p>
-                  <h4> Į Raudonąją Knygą įrašomos rūšys, kurioms gresia išnykimas sumažėjus jų skaitlingumui, pakitus arealui, pablogėjus ekologinėms sąlygoms. Įrašyti, išbraukti arba daryti kokius pakeitimus gali siūlyti mokslinės ir kitos valstybinės bei visuomeninės įstaigos ir organizacijos, atskiri mokslininkai. Pasiūlymus svarsto ir sprendimus priima prie Lietuvos Respublikos aplinkos apsaugos departamento sudaryta Lietuvos Raudonosios Knygos komisija. </h4>
+                  <h4> Įrašyti, išbraukti arba daryti kokius pakeitimus gali siūlyti mokslinės ir kitos valstybinės bei visuomeninės įstaigos ir organizacijos, atskiri mokslininkai. Pasiūlymus svarsto ir sprendimus priima prie Lietuvos Respublikos aplinkos apsaugos departamento sudaryta Lietuvos Raudonosios Knygos komisija.
+                  2007 metų, birželio 19 dieną, Botanikos institute Verkių rūmuose buvo pristatyta ką tik išleista Lietuvos raudonoji knyga.
+
+                 </h4>
 
                 </p>
               </div>
               <div class="col-xs-3 aprasymas">
                 <p>
-                  <h4> 2007 metų, birželio 19 dieną, Botanikos institute Verkių rūmuose buvo pristatyta ką tik išleista Lietuvos raudonoji knyga. Šį kapitalinį, beveik 800 puslapių iliustruotą Aplinkos ministerijos leidinį parengė 57 mokslininkai ir gamtininkai. Raudona knygos spalva tarsi perspėja apie retų ir nykstančių gyvūnų, augalų, kerpių bei grybų rūšių mūsų šalyje likimą. Į šią knygą įrašytos 767 rūšys. Tarp jų – 23 žinduolių, 80 paukščių, 123 vabzdžių, 221 žiedinių augalų, 93 samanų, 112 grybų, 63 kerpių ir kt.</h4>
+                  <h4> Šį kapitalinį, beveik 800 puslapių iliustruotą Aplinkos ministerijos leidinį parengė 57 mokslininkai ir gamtininkai. Raudona knygos spalva tarsi perspėja apie retų ir nykstančių gyvūnų, augalų, kerpių bei grybų rūšių mūsų šalyje likimą. Į šią knygą įrašytos 767 rūšys. Tarp jų – 23 žinduolių, 80 paukščių, 123 vabzdžių, 221 žiedinių augalų, 93 samanų, 112 grybų, 63 kerpių ir kt.
+                  1962 metais buvo patvirtintas saugotinų augalų sąrašas, kurį sudarė 176 jų rūšys.
+                </h4>
                 </p>
               </div>
             </div>
@@ -164,56 +170,64 @@
           <a target="_self" href="kindimg/1.jpg">
     <img src="kindimg/1.jpg" alt="Medūzgalvė trapiabudė" width="300" height="200">
   </a>
-          <div class="desc"><h5>Medūzgalvė trapiabudė</h5></div>
+          <div class="desc">
+            <h5>Medūzgalvė trapiabudė</h5></div>
         </div>
 
         <div class="gallery">
           <a target="_self" href="kindimg/2.jpg">
     <img src="kindimg/2.jpg" alt="Lututė" width="300" height="200">
   </a>
-          <div class="desc"><h5>Lututė</h5> </div>
+          <div class="desc">
+            <h5>Lututė</h5> </div>
         </div>
 
         <div class="gallery">
           <a target="_self" href="kindimg/3.jpg">
     <img src="kindimg/3.jpg" alt="Šiaurinė merkija" width="300" height="200">
   </a>
-          <div class="desc"><h5>Šiaurinė merkija</h5></div>
+          <div class="desc">
+            <h5>Šiaurinė merkija</h5></div>
         </div>
 
         <div class="gallery">
           <a target="_self" href="kindimg/4.jpg">
     <img src="kindimg/4.jpg" alt="LaumŽirgis" width="300" height="200">
   </a>
-          <div class="desc"><h5>Mažasis karališkasis laumžirgis</h5></div>
+          <div class="desc">
+            <h5>Mažasis karališkasis laumžirgis</h5></div>
         </div>
 
         <div class="gallery">
           <a target="_self" href="kindimg/9.jpg">
         <img src="kindimg/9.jpg" alt="Pilkoji žąsis" width="300" height="200">
         </a>
-          <div class="desc"><h5>Pilkoji žąsis</h5></div>
+          <div class="desc">
+            <h5>Pilkoji žąsis</h5></div>
         </div>
 
         <div class="gallery">
           <a target="_self" href="kindimg/6.jpg">
     <img src="kindimg/6.jpg" alt="Plovinė vištelė" width="300" height="200">
   </a>
-          <div class="desc"><h5>Plovinė vištelė</h5></div>
+          <div class="desc">
+            <h5>Plovinė vištelė</h5></div>
         </div>
 
         <div class="gallery">
           <a target="_self" href="kindimg/7.jpg">
         <img src="kindimg/7.jpg" alt="Vapsvaėdis" width="300" height="200">
         </a>
-          <div class="desc"><h5>Vapsvaėdis</h5></div>
+          <div class="desc">
+            <h5>Vapsvaėdis</h5></div>
         </div>
 
         <div class="gallery">
           <a target="_self" href="kindimg/8.jpg">
         <img src="kindimg/8.jpg" alt="Stepinis melsvys" width="300" height="200">
         </a>
-          <div class="desc"><h5>Stepinis melsvys</h5></div>
+          <div class="desc">
+            <h5>Stepinis melsvys</h5></div>
         </div>
 
       </div>
@@ -228,7 +242,7 @@
           <div class="search col-xs-12">
             <div class="rowinarow2">
               <p>
-                <h1> PAIEŠKA</h1>
+                <h1> SUSIJĘ ĮSTATAI</h1>
               </p><br /><br />
               <div class="rowinarow2">
                 <div class="col1 col-xs-2">
@@ -276,33 +290,35 @@
     <!-- KONTAKTAI -->
     <section5>
       <div class="container penktas" id="Susisiekime">
-        <div class="contacts">
+        <form action="email.php" method="get">
+          <div class="contacts">
 
-          <h2>Susisiekite</h2>
-          <!-- <form class="form-horizontal" action="/action_page.php"> -->
+            <h2>Susisiekite</h2>
+            <!-- <form class="form-horizontal" action="/action_page.php"> -->
 
-          <div class="form-group">
-            <label for="name">Jūsų vardas:</label>
-            <input type="text" class="form-control" id="name" placeholder="Įrašykite savo vardą" name="name" style="height:50px">
-          </div>
-
-          <div class="form-group">
-            <label for="email">El. pašto adresas:</label>
-            <input type="email" class="form-control" id="email" placeholder="Įrašykite savo el. paštą" name="email" style="height:50px">
-          </div>
-
-          <div class="form-group">
-            <label for="message">Jūsų žinutė:</label><br />
-            <textarea type="text" class="form-control" id="message" placeholder="Jūsų žinutė" name="message" style="height:80px"></textarea>
-          </div>
-
-          <form action="save.php">
-            <div class="button">
-              <button type="submit" class="btn btn-default">Siųsti</button>
+            <div class="form-group">
+              <label for="name">Jūsų vardas:</label>
+              <input type="text" class="form-control" id="name" placeholder="Įrašykite savo vardą" name="name" style="height:50px">
             </div>
-          </form>
 
-        </div>
+            <div class="form-group">
+              <label for="email">El. pašto adresas:</label>
+              <input type="email" class="form-control" id="email" placeholder="Įrašykite savo el. paštą" name="email" style="height:50px">
+            </div>
+
+            <div class="form-group">
+              <label for="message">Jūsų žinutė:</label><br />
+              <textarea type="text" class="form-control" id="message" placeholder="Jūsų žinutė" name="message" style="height:80px"></textarea>
+            </div>
+
+            <form action="save.php">
+              <div class="button">
+                <button type="submit" class="btn btn-default">Siųsti</button>
+              </div>
+            </form>
+
+          </div>
+          <form>
       </div>
 
     </section5>
